[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 72
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Category" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.0
margin_right = 497.0
margin_bottom = 736.0
color = Color( 0.929412, 0.843137, 0.843137, 1 )

[node name="Arithmetic" type="Button" parent="."]
margin_left = 37.0
margin_top = 302.0
margin_right = 224.0
margin_bottom = 417.0
custom_fonts/font = SubResource( 6 )
text = "Arithemtic"

[node name="Algebra" type="Button" parent="."]
margin_left = 266.0
margin_top = 302.0
margin_right = 452.0
margin_bottom = 414.0
custom_fonts/font = SubResource( 2 )
text = "Algebra"

[node name="Calculus" type="Button" parent="."]
margin_left = 263.0
margin_top = 467.0
margin_right = 449.0
margin_bottom = 582.0
custom_fonts/font = SubResource( 3 )
toggle_mode = true
text = "Calculus"

[node name="Probability" type="Button" parent="."]
margin_left = 38.0
margin_top = 467.0
margin_right = 223.0
margin_bottom = 579.0
custom_fonts/font = SubResource( 4 )
text = "Probability"

[node name="Label" type="Label" parent="."]
margin_left = 30.0
margin_top = 77.0
margin_right = 448.0
margin_bottom = 254.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Classic Trivia"
align = 1
autowrap = true

[connection signal="pressed" from="Arithmetic" to="." method="_on_Arithmetic_pressed"]
[connection signal="pressed" from="Algebra" to="." method="_on_Algebra_pressed"]
[connection signal="pressed" from="Calculus" to="." method="_on_Calculus_pressed"]
[connection signal="pressed" from="Probability" to="." method="_on_Probability_pressed"]
